--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ gray = #2e2e2e
   margin: 0;
   padding: 0;
   font-family: 'Kanit', sans-serif;
-  color: #2e2e2e;
+  color: #fff;
 }
 
 .indexContainer {
